--- a/zeneapp/package.json
+++ b/zeneapp/package.json
@@ -13,7 +13,8 @@
     "lucide-react": "^0.441.0",
     "next": "14.2.10",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "tailwind-scrollbar": "^3.1.0"
   },
   "devDependencies": {
     "typescript": "^5",
